fixed customers spacings

--- a/new-website-src/src/components/slides/customers/customers-mobile.scss
+++ b/new-website-src/src/components/slides/customers/customers-mobile.scss
@@ -1,5 +1,5 @@
 #table{
-    height: 63.5vh;
+    height: 73.5vh;
     width: 80.6vw;
     margin-top: 6vh;
     display:table;
@@ -15,6 +15,7 @@
 .box{
     color: white;
     float:left;
+    padding-top: 1.563vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
